stylus/main.css
html {
  font-size: 62.5%;
}
body {
  font-family: "Montserrat", sans-serif;
  font-size: 1.5rem;
  line-height: 1.5;
}
.header {
  font-size: 1.5rem;
}
.wt_banner-message h1 {
  font-size: 4rem;
  line-height: 1;
}
.wt_alert {
  font-size: 1.5rem;
}
img {
  max-width: 100%;
  border-radius: 1rem;
}
img.wt_bw-img {
  filter: #808080;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}
img.wt_bw-img:hover {
  -webkit-filter: none;
  filter: none;
}
a {
  text-decoration: none;
  color: #11242f;
}
a:hover {
  color: #4799fc;
}
h1 {
  text-align: center;
}
h2 {
  margin: 0;
  padding: 0;
}
.wt_cta {
  display: block;
  width: 50%;
  margin: 2rem auto;
  text-align: center;
  padding: 3rem;
  font-size: 2rem;
  font-weight: bold;
  background-color: #4799fc;
  border-radius: 1rem;
  color: #fff;
}
.wt_cta:hover {
  color: #fff;
}
label {
  font-size: $small-text-size;
}
label > span {
  font-size: 1.5rem;
}
input[type=text],
input[type=email] {
  border: none;
  border-bottom: 1px solid LightGrey;
  margin-top: 1rem;
}
input[type=text]:focus,
input[type=email]:focus {
  border-color: #11242f;
}
textarea {
  border: 1px solid LightGrey;
  border-radius: 0.5rem;
  margin-top: 1rem;
  resize: none;
}
textarea:focus {
  border-color: #11242f;
}
input[type=button],
input[type=submit],
input[type=reset] {
  font-size: 1.5rem;
  background-color: transparent;
  border: 1px solid LightGrey;
  border-radius: 0.5rem;
  padding: 1rem;
  margin-top: 1rem;
  text-decoration: none;
  cursor: pointer;
}
input[type=button]:hover,
input[type=submit]:hover,
input[type=reset]:hover {
  border-color: #11242f;
}
body {
  padding-top: 5rem;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
.header {
  width: 100%;
  position: absolute;
  top: 0;
  display: flex;
}
.nav {
/*
    * Horizontal scroll flexbox
    * https://iamsteve.me/blog/entry/using-flexbox-for-horizontal-scrolling-navigation
    */
  display: flex;
  width: 100%;
  flex-wrap: nowrap;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
  -ms-overflow-style: none;
}
.nav::-webkit-scrollbar {
  display: none;
}
.nav > * {
  flex: 0 0 auto;
}
.nav ul:last-child {
  margin-left: auto;
}
.logo {
  width: 5rem;
  margin: 0 1rem;
}
.logo img {
  border-radius: 0 0 50% 50%;
}
.header ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
}
.header li {
  margin: 1rem;
  font-weight: bold;
}
.sub-menu {
  flex-direction: column;
  visibility: hidden;
  line-height: 0.8;
}
.menu-item-has-children:hover .sub-menu {
  visibility: visible;
}
.header a {
  color: #11242f;
}
body.home .header a,
body.page-template-template-donate .header a {
  color: #fff;
}
.wt_banner {
  width: 100%;
  height: 100vh;
  margin-top: -5rem;
  display: flex;
  align-items: center;
}
.wt_banner > * {
  flex: 1;
  margin-left: 10%;
  max-width: 50rem;
}
.wt_banner-message h1 {
  color: #fff;
  text-align: left;
  font-weight: bold;
}
.wt_banner-message .wt_cta {
  margin: 2rem 0;
}
.wt_alert {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  background-color: #b8ffdd;
  padding: 2rem;
}
.wt_alert-message {
  max-width: 60rem;
}
@media only screen and (max-width: 800px) {
  .wt_alert-message > p {
    display: none;
  }
}
.wt_close-module {
  margin-left: auto;
  position: relative;
  top: -1rem;
  right: -1rem;
  border: none;
  background-color: transparent;
  font-size: 3rem;
}
ul.wt_featured-partners {
  list-style-type: none;
  width: 80vw;
  margin: 5% auto;
  padding: 0;
  display: flex;
  justify-content: space-around;
}
ul.wt_featured-partners li {
  flex: 1;
  max-width: 15rem;
  margin: 2rem;
}
.wt_page-section {
  display: flex;
  margin-bottom: 5%;
}
.wt_page-section > * {
  flex: 1;
  padding: 2rem;
  margin: auto;
}
section:nth-child(even) .wt_section-message {
  order: -1;
}
@media only screen and (max-width: 800px) {
  .wt_page-section {
    flex-direction: column;
  }
  section:nth-child(even) .wt_section-message {
    order: 1;
  }
}
.wt_featured-items {
  display: flex;
  justify-content: space-between;
  background-color: #4799fc;
  padding: 5%;
  margin-bottom: 10%;
}
.wt_featured-item {
  margin: 2rem;
  background-color: #fff;
  border-radius: 1rem;
  overflow: hidden;
  display: flex;
  flex-direction: column;
}
@media only screen and (max-width: 800px) {
  .wt_featured-items {
    flex-direction: column;
  }
}
.wt_featured-item > a {
  height: 20rem;
}
.wt_featured-item-image {
  height: 100%;
  width: 100%;
}
.wt_featured-item > h2 {
  padding: 2rem 2rem 0 2rem;
}
.wt_featured-item > p {
  padding: 0 2rem 2rem 2rem;
}
.wt_page-intro {
  max-width: 60rem;
  margin: 10% auto;
}
#wt_full-partners-list {
  list-style-type: none;
  margin: 0 10%;
  padding: 0;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
  grid-gap: 10%;
}
.wt_two-column-face-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
  margin: 0 10%;
  grid-gap: 10%;
}
.wt_three-column-face-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
  margin: 0 10%;
  grid-gap: 10%;
}
.wt_names-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
  margin: 0 10%;
  grid-gap: 10%;
}
.wt_member {
  display: flex;
}
.wt_member > * {
  flex: 1;
  margin: 1rem;
}
.wt_form-banner {
  max-width: 100%;
  margin: 2rem;
  min-height: 100vh;
  display: flex;
  align-items: center;
}
.wt_form-banner > * {
  flex: 1;
  max-width: 100%;
}
.wt_form-banner-message h1 {
  color: #fff;
  text-align: left;
  font-weight: bold;
}
input[type=text],
input[type=email],
textarea {
  max-width: 100%;
}
.footer {
  background-color: #0d232f;
  color: #fff;
  padding: 2rem;
  bottom: 0;
}
.footer a {
  color: #fff;
}

